--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
   <script type="module" src="src/app.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 </head>
-<body>
+<body class="bg-dark">
   <header class="header">
     <nav class="navbar navbar-expand-lg bg-body-tertiary bd-dary">
       <div class="container-fluid">
@@ -22,20 +22,37 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./form.html">Add Party</a>
+              <a class="nav-link active" href="#add-party">Add Party</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-    <section class="party-list">
-    <div id="eventList">
-      <!-- event cards created in js  -->
-    </div>
-  </section>  
+  <section class="container flex intake-form text-info text-semibold ">
+    <form id="add-party">
+      <div class="mb-3">
+        <label for="partyName" class="form-label">Party Name:</label>
+        <input type="text" class="form-control" name="partyName" id="partyName" aria-describedby="">
+      </div>
+      <div class="mb-3">
+        <label for="partyDescription" class="form-label">Description:</label>
+        <input type="text" class="form-control" name="partyDescription" id="partyDescription">
+      </div>
+      <div class="mb-3">
+        <label for="partyDate" class="form-label">Date:</label>
+        <input type="date" class="form-control" name="partyDate" id="partyDate">
+      </div>
+      <div class="mb-3">
+        <label for="partyLocation" class="form-label">Location:</label>
+        <input type="text" class="form-control" name="partyLocation" id="partyLocation">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </section>
+  
 </body>
 </html>
