--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
-  <script type="module" src="src/app.js" defer></script>
+  <script type="module" src="src/form.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 </head>
 <body class="bg-dark">
@@ -33,7 +33,7 @@
     </nav>
   </header>
   <section class="container flex intake-form text-info text-semibold ">
-    <form id="add-party">
+    <form id="addEvent">
       <div class="mb-3">
         <label for="partyName" class="form-label">Party Name:</label>
         <input type="text" class="form-control" name="partyName" id="partyName" aria-describedby="">
