cleaned up the cards and aligned delete button on the bottom.

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./form.html">Add Party</a>
+              <a class="nav-link" href="#addEvent">Add Party</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-    <section class=" d-flex flex-xl-column justify-content-evenly ">
+    <section class=" d-flex flex-xl-column flex-wrap justify-content-evenly ">
     <div id="eventList" class="d-flex mb-10 justify-content-center ">
       <!-- event cards created in js  -->  
     </div>
     <input id="setDelete" style="visibility: hidden;"/>
   </section>
-  <section class="container justify-content-center mb-5 p-4 intake-form text-light fw-semibold col-4 bg-secondary ">
+  <section class="container justify-content-center flex-wrap mb-5 p-4 intake-form text-light fw-semibold col-4 bg-secondary ">
     <form id="addEvent">
       <div class="mb-3">
         <label for="partyName" class="form-label">Party Name:</label>
