--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div class="mb-3">
         <label for="partyDate" class="form-label">Date:</label>
-        <input type="date" class="form-control" name="partyDate" id="partyDate">
+        <input type="datetime-local" class="form-control" name="partyDate" id="partyDate">
       </div>
       <div class="mb-3">
         <label for="partyLocation" class="form-label">Location:</label>
